// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GigphyExpertApp /> Debe de mostrar <GigphyExpertApp /> correctamente 1`] = `
<Fragment>
  <h2>
    GigphyExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas en <GigphyExpertApp /> Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GigphyExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Dragon ball"
      key="Dragon ball"
    />
    <GifGrid
      category="One Piece"
      key="One Piece"
    />
  </ol>
</Fragment>
`;
